<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">快搜</string>
    <string name="action_settings">Settings</string>
    <string name="search_key">搜索关键字/关键词</string>
    <string name="introdu_text">简介</string>
    <string name="app_evaluate">评价</string>
    <string name="app_more">展开</string>
    <string name="app_color">收起</string>
    <string name="hello_world">Hello world!</string>
    <string name="the_default_name">游客</string>
    <string name="error_connet_s">当前网络不可用，请检查网络设置。</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="text_ok">确定</string>
    <string name="updata_ing">更新中&#160;</string>
    <string name="str_pic">拍照</string>
    <string name="str_img_Album">从相册选择</string>
    <string name="text_cance">取消</string>
    <string name="useing_text">正在使用</string>
    <string name="finish_ed">完成</string>

    <!-- 身边界面 -->
    <string name="nearby_top">身边</string>
    <string name="nearby_search">搜索</string>
    <string name="nearby_man">附近用户</string>
    <string name="search_list">搜索列表</string>
    <string name="app_detail">应用详情</string>
    <string name="app_dowble">下载</string>
    <string name="app_view_details">查看详情</string>
    <string name="drop_down_list_header_default_text">点击可以刷新</string>
    <string name="drop_down_list_header_pull_text">下拉可以刷新</string>
    <string name="drop_down_list_header_release_text">松开可以刷新</string>
    <string name="drop_down_list_header_loading_text">加载中…</string>
    <string name="drop_down_list_footer_default_text">更多</string>
    <string name="drop_down_list_footer_loading_text">加载中…</string>
    <string name="drop_down_list_footer_no_more_text">没有更多了</string>
    <string name="image_content">Image</string>
    <string name="update_at">updated at:&#160;</string>

    <!-- 我的应用 -->
    <string name="myapp_near">最近使用</string>
    <string name="myapp_text">我的应用</string>
    <string name="app_management">更新应用</string>
    <string name="one_key_down">一键更新</string>
    
    <!-- 个人中心101080925 101031341-->
    <string name="qq_appid">222222</string>
    <string name="mycenter_test">个人中心</string>
    <string name="qq_btn_test">QQ账号登陆</string>
    <string name="sign_text">签名</string>
    <string name="about_text">关于我</string>
    <string name="about_you">你今天的心情怎样</string>
    <string name="set_updata">提交</string>
    <string name="attention_me">关注</string>
    <string name="me_attention">粉丝</string>
    <string name="friend_text">朋友</string>
    <string name="account_text">退出登录</string>
    <string name="me_dynamic">我的动态</string>
    <string name="photo_list">相册</string>
    <string name="feed_text_string">输入你要反馈的内容&#160;</string>
    <string name="set_up">设置</string>
    <string name="xinlang_btn_test">新浪微博登陆</string>

    <!-- 消息 -->
    <string name="news_text">消息</string>
    <string name="uninstall_text">卸载</string>
    <string name="man_book">通讯录</string>
    <string name="updata_text">更新</string>
    <string name="my_app">APP应用</string>
    <string name="my_dy">个人动态</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    
    <string name="feed_string">意见反馈</string>

</resources>