<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="wrap_content"
        android:layout_height="230dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingTop="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="@drawable/btn_style_alert_dialog_background"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/photo_btn"
            android:text="@string/str_pic"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_pick_photo"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
           android:layout_marginTop="15dip"
            android:background="@drawable/photo_btn"
            android:text="@string/str_img_Album"
            android:textColor="@color/white"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dip"
            android:background="@drawable/cancer_btn"
            android:text="@string/text_cance"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>