<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linew"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/nearby_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@id/My_search_title"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@drawable/navigation_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/my_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/myapp_near"
            android:textAppearance="@style/TextAppearanceTitleLager" />
    </RelativeLayout>

    <FrameLayout
        android:id="@id/framelayout_err_connet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/My_search_title"
        android:visibility="gone" />

    <LinearLayout
        android:id="@id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/framelayout_err_connet"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <TextView
            android:id="@+id/recent_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/abc_cab_background_top_holo_light"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/myapp_near"
            android:textColor="@color/myapp_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/my_app_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/abc_ab_share_pack_holo_dark"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/myapp_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/myapp_man_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/abc_ab_share_pack_holo_dark"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/app_management"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</RelativeLayout>