<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linew"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/nearby_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@id/My_search_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation_bg"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/news_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/attention_me"
            android:textAppearance="@style/TextAppearanceTitleLager" />

        <ImageButton
            android:id="@id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_back_img" />
    </RelativeLayout>

    <FrameLayout
        android:id="@id/framelayout_err_connet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/My_search_title"
        android:visibility="gone" />

    <LinearLayout
        android:id="@id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/framelayout_err_connet"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <TextView
            android:id="@+id/attention_me_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/abc_cab_background_top_holo_light"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/attention_me"
            android:textColor="@color/myapp_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/me_attention_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/abc_ab_share_pack_holo_dark"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/me_attention"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/friend_text_t"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/abc_ab_share_pack_holo_dark"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/friend_text"
            android:textSize="18sp" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPagernews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout1"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</RelativeLayout>