<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/nearby_color" >

    <RelativeLayout
        android:id="@id/My_search_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@drawable/navigation_bg"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feed_string"
            android:textAppearance="@style/TextAppearanceTitleLager" />

        <ImageButton
            android:id="@id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_back_img" />
    </RelativeLayout>
    <FrameLayout
        android:id="@id/framelayout_err_connet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/My_search_title"
        android:visibility="gone" />
    <RelativeLayout
        android:id="@+id/relat_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/framelayout_err_connet"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:background="@drawable/setup_bg" >

            <EditText
                android:id="@+id/feed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="3dp"
                android:gravity="top"
                android:hint="@string/feed_text_string"
                android:textColor="@color/text_col" 
                android:background="@drawable/setup_bg"
                android:layout_marginBottom="10dp"/>
        
        <Button 
            android:id="@+id/set_feed"
            android:layout_below="@id/feed_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/set_updata"
            android:textColor="@color/white"
            android:background="@drawable/set_btn_img"
            />
    </RelativeLayout>
    
        <RelativeLayout
        android:id="@id/loading_relat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/relat_layout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/loading_list_bg"
        android:visibility="gone"
        android:padding="5dp" >

        <ImageView
            android:id="@id/loading_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/loading_list" />
    </RelativeLayout>

</RelativeLayout>