<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:id="@+id/the_center_rel"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/nearby_color" >

    <RelativeLayout
        android:id="@+id/center_relat"
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_below="@id/framelayout_err_connet"
        android:background="@drawable/the_center_bg" >

        <RelativeLayout
            android:id="@+id/the_man_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp" >

            <ImageView
                android:id="@+id/bg_img"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:scaleType="fitXY"
                android:src="@drawable/the_defaut_aple" />

            <com.hyk.view.RoundImageView
                android:id="@+id/user_img"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_alignBottom="@id/bg_img"
                android:layout_alignLeft="@id/bg_img"
                android:layout_alignRight="@id/bg_img"
                android:layout_alignTop="@id/bg_img"
                android:scaleType="fitXY"
                android:src="@drawable/the_default"
                imagecontrol:border_outside_color="#00000000"
                imagecontrol:border_thickness="4dp" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_alignBottom="@id/user_img"
                android:layout_alignRight="@id/user_img"
                android:background="@drawable/the_add_img" />
        </RelativeLayout>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/the_man_img"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/sign_text"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sing_relat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_relat"
        android:paddingTop="20dp" >

        <ImageView
            android:id="@+id/sign_icon"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/sign_icon_img" />

        <TextView
            android:id="@+id/sign_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/sign_icon"
            android:layout_toRightOf="@id/sign_icon"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:text="@string/sign_text"
            android:textColor="@color/text_col"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/sign_name_edit"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/sign_tv"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@id/sign_tv"
            android:background="@color/transparent"
            android:gravity="top"
            android:hint="@string/about_you"
            android:imeActionLabel="@string/app_more"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="false"
            android:textColor="@color/sign_col"
            android:textSize="13sp" />

        <!-- <ImageView -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignParentRight="true" -->
        <!-- android:layout_alignTop="@id/sign_tv" -->
        <!-- android:layout_marginRight="20dp" -->
        <!-- android:background="@drawable/more_open" /> -->

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_name_edit"
            android:layout_marginTop="15dp"
            android:background="@drawable/center_line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dy_relat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sing_relat"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/dy_icon"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/dy_icon_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/dy_icon"
            android:layout_toRightOf="@id/dy_icon"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:text="@string/me_dynamic"
            android:textColor="@color/text_col"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/dy_icon"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/more_open" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dy_icon"
            android:layout_marginTop="13dp"
            android:background="@drawable/center_line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about_relat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dy_relat"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/about_me_icon_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/about_icon"
            android:layout_toRightOf="@id/about_icon"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:text="@string/about_text"
            android:textColor="@color/text_col"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/about_icon"
            android:layout_marginRight="20dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/more_open" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_icon"
            android:layout_marginTop="13dp"
            android:background="@drawable/center_line" />
    </RelativeLayout>

    <Button
        android:id="@+id/canlce_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/canlce_btn_img"
        android:text="@string/account_text"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@id/loading_relat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/loading_list_bg"
        android:padding="5dp">

        <ImageView
            android:id="@id/loading_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/loading_list" />
    </RelativeLayout>

</RelativeLayout>